[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwigrad"
version = "0.19"
authors = [
  { name="Marco Salvalaggio", email="mar.salvalaggio@gmail.com" },
]
description = "Mini deep learning framework"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "graphviz",
]


[project.urls]
"Homepage" = "https://github.com/marcosalvalaggio/femtograd"
"Bug Tracker" = "https://github.com/marcosalvalaggio/femtogradissues"
